# junk

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  INSTALL.md  Makefile  README.md  TODO  TODO.md  alacritty.yml  go.mod  main.go  minterm.yml  t  zterm.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: release.yml  upload_asset.sh
alacritty-fork/: .gitignore  README.md  TODO  rustfmt.toml
alacritty-fork/alacritty/: Cargo.toml
alacritty-fork/docs/: features.md
alacritty/src/: cli.rs  clipboard.rs  daemon.rs  event.rs  input.rs  scheduler.rs
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: lib.rs
aminal-fork/: .gitignore  Makefile  TODO  config.go  logger.go  main_test.go
aminal-fork/buffer/: hint.go
aminal-fork/config/: actions.go  defaults.go
aminal-fork/gui/: explain.go  fontmap.go  fonts.go  textbox.go
aminal-fork/terminal/: output.go  sgr.go  sixel.go  terminal.go
config/: config.go
devmtn/: README.md
devmtn/01/: notes.txt
devmtn/05/: notes.md
devmtn/06/: bits-and-bobs.md  boilerplate.js  notes.md  schemas.js
devmtn/07/: readme.md
devmtn/08/: readme.md
devmtn/11/: readme.md
devmtn/notes/: README.md
docs/: escape_support.md  features.md
extra/: alacritty.man  minterm.man  zterm.info  zterm.man
gui/: actions.go  gui.go  mouse.go  renderer.go
lang/c/: basic-shell.c  battery.c  binary-add.c  cat.c  cels-fahr.c  chars.c  clock.c  endian.c  fahr-cel-table.c  fib.c  fizzbuzz.c  haiku-more.c  haiku.c  hello-world.c  hello.c  hello_cgi.c  just-enough-init.c  last_resort.c  pause.c  perc-count.c  pi.c  primes.c  recursive-sum.c  small.c  square.c  stdio-count-tabs-spaces-newlines.c  stdio-one-word-per-line.c  stdio-show-chars.c  stdio-trim.c  tempfile.c  the_flower  tsh.c  types.c  waitfor.c
lang/elm/: learnxiny.elm
lang/go/: crawler.go
lang/haskell/: .gitignore  README.md
lang/py/: git.py  (+12 more)
lang/rust/minterm/minterm/: Cargo.toml
lang/rust/minterm/minterm/src/: event.rs
lang/rust/minterm/minterm/src/config/: debug.rs  mouse.rs
lang/rust/minterm/minterm/src/display/: content.rs  meter.rs
lang/rust/minterm/minterm/src/renderer/: rects.rs
lang/rust/minterm/minterm_crossfont/: Cargo.toml
lang/rust/minterm/minterm_terminal/: Cargo.toml
lang/rust/minterm/minterm_terminal/src/: event.rs  event_loop.rs  lib.rs
lang/rust/minterm/minterm_terminal/src/config/: mod.rs  scrolling.rs
lang/rust/minterm/minterm_terminal/src/tty/: unix.rs
minterm/: .editorconfig  Cargo.toml  README.md
old-sites/: monette.xml
ops/: check-connectivity.sh  check-ec2-instance-certificates.js  copy-ecr-images-to-new-account.sh  sourcegraph.yml
scripts/: README.md  create-flamegraph.sh
zterm/: Cargo.toml
zterm_config_derive/: Cargo.toml
zterm_terminal/: Cargo.toml
(+2746 files in other folders)
