[package]
name = "minterm_crossfont"
version = "0.1.0"
description = "Cross platform native font loading and rasterization"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
repository = "https://github.com/alacritty/crossfont.git"
documentation = "https://docs.rs/crossfont"
license = "Apache-2.0"
readme = "README.md"
categories = ["gui", "os"]
keywords = ["font"]
edition = "2018"

[dependencies]
libc = "0.2"
foreign-types = "0.5"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
core-foundation = "0.9"
core-text = "19"
core-graphics = "0.22"
core-foundation-sys = "0.8"
